ubuntu-dev-tools (0.173) UNRELEASED; urgency=medium

  [ Stefano Rivera ]
  * pull-debian-debdiff: Don't unpack the older source package, it will often
    use the same directory as the newer one, and break.
  * Drop 404main, it's been totally broken for years.
  * Use python3-debian's Version class in merge-changelog, to support Python 3.

  [ Scott Kitterman ]
  * Update requestsync to python3 (Closes: #927147)

 -- Stefano Rivera <stefanor@debian.org>  Wed, 04 Sep 2019 16:31:28 -0300

ubuntu-dev-tools (0.172) unstable; urgency=medium

  [ Mattia Rizzolo ]
  * autopkgtest: Add a allow-stderr restriction, as things log to stderr.

  [ Stefano Rivera ]
  * Build-Depend on pylint (>= 2, the Python 3 version), it replaced pylint3.
  * Explicitly declare python dependencies in the python library modules (the
    setup.py doesn't provide these) and ubuntu-dev-tools itself.
  * dh_python2 doesn't generate a python dependency in ubuntu-dev-tools, now
    that it's scripts-only, so manually declare one.
  * Install pull-debian-source as python 3. It was ported, and doesn't work
    under python 2 any more.  LP: #1841127
  * Use dh_install to split the build into multiple binary packages.

 -- Mattia Rizzolo <mattia@debian.org>  Wed, 04 Sep 2019 08:44:51 +0200

ubuntu-dev-tools (0.171) unstable; urgency=medium

  * Add an autopkgtest running the package tests.
    Currently it runs the tests directly over the sources, instead of the
    installed package.
  * ubuntutools/archive: Disable dsc signature verification for non-Debian.
    Ubuntu doesn't have a unified keyring of developers like Debian has, so
    it is not feasible to check for the dsc signatures.

 -- Mattia Rizzolo <mattia@debian.org>  Mon, 12 Aug 2019 13:42:31 +0200

ubuntu-dev-tools (0.170) unstable; urgency=medium

  [ Robie Basak ]
  * pull-debian-source:
    + Add a new --no-verify-signature option option, to download a source
      package without checking its signature.