@@ -15,16 +15,6 @@ Build-Depends:
  libwww-perl,
  lsb-release,
  pylint (>= 2),
- python-all (>= 2.6.5-13~),
- python-apt (>= 0.7.93~),
- python-debian (>= 0.1.20~),
- python-distro-info (>= 0.4~),
- python-flake8,
- python-httplib2,
- python-launchpadlib (>= 1.5.7),
- python-mock,
- python-setuptools,
- python-unittest2,
  python3-all,
  python3-apt,
  python3-debian,
@@ -54,14 +44,6 @@ Depends:
  distro-info (>= 0.2~),
  dpkg-dev,
  lsb-release,
- python,
- python-apt (>= 0.7.93~),
- python-debian (>= 0.1.20~),
- python-distro-info (>= 0.4~),
- python-httplib2,
- python-launchpadlib (>= 1.5.7),
- python-lazr.restfulclient,
- python-ubuntutools,
  python3,
  python3-apt,
  python3-debian,
@@ -93,7 +75,6 @@ Recommends:
  reportbug (>= 3.39ubuntu1),
  ubuntu-keyring | ubuntu-archive-keyring,
 Suggests:
- python-simplejson | python (>= 2.7),
  qemu-user-static,
 Description: useful tools for Ubuntu developers
  This is a collection of useful tools that Ubuntu developers use to make their
@@ -141,27 +122,6 @@ Description: useful tools for Ubuntu developers
   - ubuntu-upload-permission - query / list the upload permissions for a
     package.
   - update-maintainer - script to update maintainer field in ubuntu packages.
-
-Package: python-ubuntutools
-Architecture: all
-Section: python
-Depends:
- python-debian,
- python-distro-info,
- python-httplib2,
- python-launchpadlib,
- sensible-utils,
- ${misc:Depends},
- ${python:Depends},
-Breaks:
- ubuntu-dev-tools (<< 0.154),
-Replaces:
- ubuntu-dev-tools (<< 0.154),
-Description: useful APIs for Ubuntu developer tools — Python 2 library
- This package ships a collection of APIs, helpers and wrappers used to
- develop useful utilities for Ubuntu developers.
- .
- This package installs the library for Python 2.
 
 Package: python3-ubuntutools
 Architecture: all
