@@ -5,6 +5,8 @@ ubuntu-dev-tools (0.173) UNRELEASED; urgency=medium
     use the same directory as the newer one, and break.
   * Drop 404main, it's been totally broken for years.
   * Use python3-debian's Version class in merge-changelog, to support Python 3.
+  * Port Python scripts to Python 3, remove python 2 modules.
+    (Closes: #938740, LP: #1099537)
 
   [ Scott Kitterman ]
   * Update requestsync to python3 (Closes: #927147)
